src/objects/Outbound_Notification__c.object
<CustomObject>
    <description>This object is used to send out notifications to CINT.</description>
    <fields>
        <fullName>Last_PN_Synchronized_Date__c</fullName>
        <label>Last PN Synchronized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification_Key__c</fullName>
        <description>This field is holding the old objects API name, compound key and the operation done. The format is ObjectAPIName:ObjectExternalId:Operation.</description>
        <externalId>true</externalId>
        <label>Notification Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>This field is holding the API Name of the object that the old record had.</description>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_External_ID__c</fullName>
        <description>This field will hold the old records external Id, typically a compound of some field values from the old object.</description>
        <label>Object External ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_SFDC_ID__c</fullName>
        <description>This is the SFDC ID of the record that has been deleted/updated/etc.</description>
        <label>Object SFDC ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>This is the operation done to the old record.</description>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>INSERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PN_Mark_as_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is set by CINT when they have got the OBM.</description>
        <label>PN Mark as Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is read by CINT in the belt and braced integration.</description>
        <label>PN Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <label>Outbound Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Notification_Key__c</columns>
        <columns>Operation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OUT-{0}</displayFormat>
        <label>Outbound Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>